# cloud-code

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docker/agents/: docker-compose.agents.yml
docker/agents/aider/: Dockerfile
docker/agents/base/: Dockerfile
docker/agents/claude-code/: Dockerfile
docker/agents/codex/: Dockerfile
docker/agents/gemini/: Dockerfile
docs/: ARCHITECTURE.md  CODE_INTELLIGENCE.md  DEVELOPMENT.md  SETUP.md
prompts/: coder.md
scripts/: build-agents.sh
src/cloud_code/: __init__.py  config.py  main.py
src/cloud_code/agent_control_plane/: __init__.py  cli_runner.py  loop.py
src/cloud_code/agents/: __init__.py  base.py
src/cloud_code/api/: __init__.py  auth.py  credentials.py
src/cloud_code/core/: __init__.py  container_manager.py  orchestrator.py  task_interface.py  vault.py  workspace.py
src/cloud_code/db/: models.py
src/cloud_code/github/: __init__.py  app.py  comment_parser.py  events.py  task_creator.py  webhook.py
src/cloud_code/tools/: __init__.py
src/cloud_code/web/templates/: base.html  dashboard.html  setup.html
