[project]
name = "cloud-code"
version = "0.1.0"
description = "Autonomous AI-Powered Development Platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Cloud Code Team" }
]
keywords = ["ai", "automation", "github", "development", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.17",
    "jinja2>=3.1.4",
    "sse-starlette>=2.1.0",  # Server-sent events for real-time updates

    # Database
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",

    # Task queue
    "celery>=5.4.0",
    "redis>=5.2.0",

    # AI/LLM
    "anthropic>=0.40.0",
    "openai>=1.57.0",
    "litellm>=1.50.0",  # LLM proxy for unified API

    # Vector store / RAG
    "chromadb>=0.5.23",

    # GitHub / GitLab
    "PyGithub>=2.5.0",
    "python-gitlab>=4.4.0",  # GitLab support
    "gitpython>=3.1.43",

    # Container management
    "python-on-whales>=0.73.0",  # Docker API

    # Secrets management
    "hvac>=2.3.0",  # HashiCorp Vault client

    # File handling
    "pyyaml>=6.0.2",  # YAML for tasking/reporting files
    "watchfiles>=0.24.0",  # File watching (optional)

    # Utilities
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.0",
    "cryptography>=44.0.0",
    "rich>=13.9.0",
    "typer>=0.12.0",  # CLI
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]
prod = [
    "gunicorn>=23.0.0",
]

[project.scripts]
cloud-code = "cloud_code.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cloud_code"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["cloud_code"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
